WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76627
Node::canHaveLightChildRendererWithShadow is not used anywhere.
https://bugs.webkit.org/show_bug.cgi?id=76627
Summary
Node::canHaveLightChildRendererWithShadow is not used anywhere.
Shinya Kawanaka
Reported
2012-01-19 05:33:36 PST
This returns 'false', and no other class does not override it. Maybe We can remove it safely.
Attachments
Patch
(2.23 KB, patch)
2012-01-19 05:39 PST
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-01-19 05:39:44 PST
Created
attachment 123116
[details]
Patch
WebKit Review Bot
Comment 2
2012-01-19 23:19:13 PST
Comment on
attachment 123116
[details]
Patch Clearing flags on attachment: 123116 Committed
r105484
: <
http://trac.webkit.org/changeset/105484
>
WebKit Review Bot
Comment 3
2012-01-19 23:19:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug