Node::canHaveLightChildRendererWithShadow is not used anywhere. https://bugs.webkit.org/show_bug.cgi?id=76627

Patch by Shinya Kawanaka <shinyak@google.com> on 2012-01-19
Reviewed by Darin Adler.

Since Node::canHaveLightChildRendererWithShadow is not overriden anywhere, and it returns always false.
We can remove it.

No new tests, because no change in behavior.

* dom/Node.h:
* dom/NodeRenderingContext.cpp:
(WebCore::NodeRenderingContext::shouldCreateRenderer):

Canonical link: https://commits.webkit.org/93524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105484 268f45cc-cd09-0410-ab3c-d52691b4dbfc